# gasboats

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  go.work  go.work.sum  quench.toml
coop/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  quench.toml
coop/.captain/: config.yml
coop/.claude/: settings.json
coop/.github/workflows/: README.md  build.yml.disabled  ci.yml.disabled  release.yml
coop/.oj/runbooks/: base.hcl
coop/.rwx/: ci.yml  docker.yml  e2e.yml  push.yml  release.yml
coop/crates/cli/: Cargo.toml  build.rs
coop/crates/cli/src/: config.rs  config_tests.rs  error.rs  error_tests.rs  event.rs  event_log.rs  event_log_tests.rs  lib.rs  main.rs  mux_client.rs  mux_client_tests.rs  profile.rs  profile_tests.rs  record.rs  record_tests.rs  rendering_test_support.rs  replay_gate.rs  replay_gate_tests.rs  ring.rs  ring_tests.rs  run.rs  run_tests.rs  s3.rs  s3_tests.rs  screen.rs  screen_tests.rs  session_tests.rs  start.rs  start_tests.rs  stop.rs  stop_tests.rs  switch.rs  switch_tests.rs  test_support.rs  transcript.rs  transcript_tests.rs  usage.rs  usage_tests.rs
coop/crates/cli/src/backend/: adapter.rs  adapter_tests.rs  mod.rs  nbio.rs  spawn.rs
coop/crates/cli/src/command/: attach.rs  attach_tests.rs  cred.rs  mod.rs  open.rs  peek.rs  send.rs  send_tests.rs
coop/crates/cli/src/driver/: composite.rs  composite_tests.rs  driver_tests.rs  error_category.rs  error_category_tests.rs  hook_detect.rs  hook_recv.rs  hook_recv_tests.rs  jsonl_stdout.rs  jsonl_stdout_tests.rs  log_watch.rs  log_watch_tests.rs  mod.rs  nudge.rs  process.rs  process_tests.rs  screen_parse.rs  screen_parse_tests.rs  stdout_detect.rs
coop/crates/cli/src/driver/claude/: encoding.rs  encoding_tests.rs  hooks.rs  hooks_tests.rs  mod.rs  parse.rs  parse_tests.rs  prompt.rs  resume.rs  (+9 more)
coop/crates/cli/src/session/: groom.rs  mod.rs  run.rs  transition.rs
coop/crates/cli/src/transport/: auth.rs  auth_tests.rs  compat.rs  compat_tests.rs  handler.rs  handler_tests.rs  http.rs  inbox.rs  mod.rs  mod_tests.rs  nats.rs  nats_relay.rs  nats_relay_tests.rs  state.rs  state_tests.rs  ws.rs  ws_msg.rs  ws_tests.rs
coop/crates/cli/tests/: claude_integration.rs  grpc_integration.rs  large_output.rs  log_watch_rotation.rs  pty_backend.rs  pty_edge_cases.rs  rendering_attach.rs  rendering_fidelity.rs  rendering_support.rs  rendering_tmux_oracle.rs  session_loop.rs  tmux_backend.rs  ws_integration.rs
coop/crates/cli/tests/scenarios/: claude_ask_user.toml  claude_hello.toml  claude_multi_question.toml  claude_plan_mode.toml  claude_tool_use.toml  render_colors.toml  render_long_output.toml  render_plain.toml  render_utf8.toml
coop/crates/mux/: Cargo.toml  README.md
coop/crates/mux/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
coop/crates/mux/src/credential/: broker.rs  device_code.rs  distributor.rs  mod.rs  oauth.rs  persist.rs  pkce.rs  pkce_tests.rs  refresh.rs
coop/crates/mux/src/transport/: auth.rs  http.rs  mod.rs  nats_pub.rs  nats_sub.rs  nats_sub_tests.rs  ws.rs  ws_mux.rs
coop/crates/mux/src/upstream/: bridge.rs  bridge_tests.rs  client.rs  feed.rs  health.rs  mod.rs  poller.rs  prewarm.rs
coop/crates/mux/tests/: http.rs
coop/crates/web/: CLAUDE.md  biome.json  build.ts  package.json  tsconfig.json  vite.config.mux.ts  vite.config.terminal.ts  vitest.config.ts
coop/crates/web/src/components/: ActionBtn.tsx  AgentBadge.tsx  DropOverlay.tsx  OAuthToast.tsx  ResultDisplay.tsx  Section.tsx  StatusBar.tsx  StreamAlert.tsx  Terminal.tsx  TerminalLayout.tsx  TerminalPreview.tsx  Tile.tsx
coop/crates/web/src/hooks/: useApiClient.ts  useFileUpload.ts  useWebSocket.ts  utils.ts
coop/crates/web/src/lib/: ansi-render.ts  ansi.ts  base64.ts  constants.ts  replay-gate.test.ts  replay-gate.ts  types.ts  ws-harness.test.ts  ws-harness.ts
coop/crates/web/src/styles/: globals.css
coop/deploy/: README.md  k8s-launch.sh  k8s-mux.yaml  k8s-standalone.yaml
coop/docs/: rwx-native-oci-migration.md
coop/docs/api/: http.md  websocket.md
coop/docs/claude/: 01-overview.md  02-credentials.md  03-lifecycle.md  04-mux.md  coop-vs-gastown.md  coop-vs-oddjobs.md
coop/proto/coop/v1/: coop.proto
coop/scripts/: install
coop/tests/debug/: .env.example  capture-claude.ts  package.json  start-k8s.ts  start-mux.ts  start.ts  tsconfig.json
coop/tests/debug/lib/: credentials.ts  setup.ts
coop/tests/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  run.sh  tsconfig.json
coop/tests/e2e/fixtures/: fidelity-comparison.html  screen-snapshot-tools.json  screen-snapshot.json
coop/tests/e2e/lib/: fidelity-entry.ts  fidelity-server.ts  harness.ts  mock-coop.ts  pixel-diff.ts
coop/tests/e2e/specs/: mux-health-failure.spec.ts  mux-keyboard-input.spec.ts  mux-screen-rendering.spec.ts  mux-sessions.spec.ts  mux-state-transitions.spec.ts  preview-fidelity.spec.ts
coop/tests/specs/: Cargo.toml
coop/tests/specs/src/: lib.rs
coop/tests/specs/tests/: smoke.rs
(+911 files in other folders)
