[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/mux",
    "tests/specs",
]

[workspace.dependencies]
anyhow = "1"
async-nats = "0.46"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
avt = "0.17"
nix = { version = "0.31", features = ["term", "process", "fs", "signal"] }
rustix = { version = "1", features = ["termios"] }
notify = "8"
prost = "0.14"
regex = "1"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tonic = "0.14"
tonic-prost = "0.14"
futures-util = "0.3"
indexmap = "2"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls-no-provider"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
sha2 = "0.10"
tempfile = "3"
tokio-tungstenite = "0.28"
uuid = { version = "1", features = ["v4"] }

# build dependencies
tonic-build = "0.14"
tonic-prost-build = "0.14"

# dev dependencies
axum-test = "18"
proptest = "1"
serial_test = "3"
yare = "3"

[workspace.package]
version = "0.11.25"
edition = "2021"
license = "BUSL-1.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
