[package]
name = "coop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "coop"
path = "src/lib.rs"

[[bin]]
name = "coop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
avt.workspace = true
nix.workspace = true
notify.workspace = true
prost.workspace = true
regex.workspace = true
rustix.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
futures-util.workspace = true
parking_lot = "0.12.5"
tempfile.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ring.workspace = true
rustls.workspace = true
tokio-tungstenite.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
proptest.workspace = true
reqwest.workspace = true
serial_test.workspace = true
yare.workspace = true
axum-test.workspace = true

[lints]
workspace = true
