[package]
name = "coop-specs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
coop = { path = "../../crates/cli" }
futures-util.workspace = true
reqwest.workspace = true
ring.workspace = true
rustls.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true

[lints]
workspace = true
